sd-core/src/snapshots/sd_core__graph__tests__hypergraph_new_crash.sd.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("x"))),
    Operation(Plus),
    Edge(BoundVar(Variable("d"))),
    Edge(BoundVar(Variable("f"))),
    Operation(Plus),
    Edge(BoundVar(Variable("a"))),
    Edge(BoundVar(Variable("e"))),
    Operation(Plus),
    Operation(Plus),
    Edge(BoundVar(Variable("b"))),
    Edge(BoundVar(Variable("c"))),
    Operation(Plus),
    Operation(Plus),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((2, 1, 0)),
    Some((1, 3, 0)),
    Some((2, 4, 0)),
    Some((5, 4, 1)),
    Some((4, 6, 0)),
    Some((6, 7, 0)),
    Some((7, 2, 0)),
    Some((9, 8, 0)),
    Some((0, 8, 1)),
    Some((8, 10, 0)),
    Some((3, 11, 0)),
    Some((11, 9, 0)),
    Some((10, 12, 0)),
    Some((3, 12, 1)),
    Some((12, 5, 0)),
  ],
)
