sd-core/src/snapshots/sd_core__graph__tests__hypergraph_test_basic.snap
---
source: sd-core/src/graph.rs
expression: graph
---
Hypergraph {
    nodes: [
        (
            NodeIndex(
                0,
            ),
            Input,
        ),
        (
            NodeIndex(
                1,
            ),
            Weight(
                Passive(
                    Int(
                        1,
                    ),
                ),
            ),
        ),
        (
            NodeIndex(
                2,
            ),
            Output,
        ),
    ],
    edges: [
        (
            Port {
                node: NodeIndex(
                    1,
                ),
                index: PortIndex(
                    0,
                ),
            },
            {
                Port {
                    node: NodeIndex(
                        2,
                    ),
                    index: PortIndex(
                        0,
                    ),
                },
            },
        ),
    ],
}
