sd-core/src/snapshots/sd_core__graph__tests__hypergraph_test_thunk.snap
---
source: sd-core/src/graph.rs
assertion_line: 323
expression: graph
---
Hypergraph {
    nodes: [
        (
            NodeIndex(
                0,
            ),
            Input,
        ),
        (
            NodeIndex(
                1,
            ),
            Thunk {
                args: 1,
                body: Hypergraph {
                    nodes: [
                        (
                            NodeIndex(
                                0,
                            ),
                            Input,
                        ),
                        (
                            NodeIndex(
                                1,
                            ),
                            Passive(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                        (
                            NodeIndex(
                                2,
                            ),
                            Output,
                        ),
                    ],
                    edges: [
                        (
                            Port {
                                node: NodeIndex(
                                    0,
                                ),
                                index: PortIndex(
                                    0,
                                ),
                            },
                            {},
                        ),
                        (
                            Port {
                                node: NodeIndex(
                                    1,
                                ),
                                index: PortIndex(
                                    0,
                                ),
                            },
                            {
                                Port {
                                    node: NodeIndex(
                                        2,
                                    ),
                                    index: PortIndex(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ],
                },
            },
        ),
        (
            NodeIndex(
                2,
            ),
            Thunk {
                args: 1,
                body: Hypergraph {
                    nodes: [
                        (
                            NodeIndex(
                                0,
                            ),
                            Input,
                        ),
                        (
                            NodeIndex(
                                1,
                            ),
                            Active(
                                Plus(
                                    (),
                                ),
                            ),
                        ),
                        (
                            NodeIndex(
                                2,
                            ),
                            Output,
                        ),
                    ],
                    edges: [
                        (
                            Port {
                                node: NodeIndex(
                                    0,
                                ),
                                index: PortIndex(
                                    0,
                                ),
                            },
                            {
                                Port {
                                    node: NodeIndex(
                                        1,
                                    ),
                                    index: PortIndex(
                                        1,
                                    ),
                                },
                            },
                        ),
                        (
                            Port {
                                node: NodeIndex(
                                    0,
                                ),
                                index: PortIndex(
                                    1,
                                ),
                            },
                            {
                                Port {
                                    node: NodeIndex(
                                        1,
                                    ),
                                    index: PortIndex(
                                        0,
                                    ),
                                },
                            },
                        ),
                        (
                            Port {
                                node: NodeIndex(
                                    1,
                                ),
                                index: PortIndex(
                                    0,
                                ),
                            },
                            {
                                Port {
                                    node: NodeIndex(
                                        2,
                                    ),
                                    index: PortIndex(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ],
                },
            },
        ),
        (
            NodeIndex(
                3,
            ),
            Active(
                Plus(
                    (),
                ),
            ),
        ),
        (
            NodeIndex(
                4,
            ),
            Output,
        ),
    ],
    edges: [
        (
            Port {
                node: NodeIndex(
                    0,
                ),
                index: PortIndex(
                    0,
                ),
            },
            {
                Port {
                    node: NodeIndex(
                        2,
                    ),
                    index: PortIndex(
                        0,
                    ),
                },
            },
        ),
        (
            Port {
                node: NodeIndex(
                    1,
                ),
                index: PortIndex(
                    0,
                ),
            },
            {
                Port {
                    node: NodeIndex(
                        3,
                    ),
                    index: PortIndex(
                        0,
                    ),
                },
            },
        ),
        (
            Port {
                node: NodeIndex(
                    2,
                ),
                index: PortIndex(
                    0,
                ),
            },
            {
                Port {
                    node: NodeIndex(
                        3,
                    ),
                    index: PortIndex(
                        1,
                    ),
                },
            },
        ),
        (
            Port {
                node: NodeIndex(
                    3,
                ),
                index: PortIndex(
                    0,
                ),
            },
            {
                Port {
                    node: NodeIndex(
                        4,
                    ),
                    index: PortIndex(
                        0,
                    ),
                },
            },
        ),
    ],
}
