sd-core/src/snapshots/sd_core__graph__tests__hypergraph_thunk_copy.sd.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("y"))),
    Operation(Op(Lambda)),
    Edge(Nil),
    Edge(BoundVar(Variable("x"))),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("y"))),
        Operation(Op(Plus)),
        Edge(Nil),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((0, 1, 0)),
        Some((0, 1, 1)),
        Some((1, 2, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((2, 1, 0)),
    Some((1, 3, 0)),
    Some((0, 4, 0)),
    Some((4, 2, 0)),
  ],
)
