sd-core/src/snapshots/sd_core__graph__tests__hypergraph_thunks.sd.snap
---
source: sd-core/src/graph.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("x"))),
    Operation(Plus),
    Edge(Thunk(Addr)),
    Edge(Thunk(Addr)),
    Edge(Thunk(Addr)),
    Edge(BoundVar(Variable("a"))),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("x"))),
        Edge(BoundVar(Variable("y"))),
        Edge(BoundVar(Variable("z"))),
        Edge(BoundVar(Variable("u"))),
        Edge(BoundVar(Variable("v"))),
        Operation(Plus),
        Edge(BoundVar(Variable("c"))),
        Edge(BoundVar(Variable("d"))),
        Operation(Plus),
        Edge(BoundVar(Variable("b"))),
        Operation(Plus),
        Edge(BoundVar(Variable("a"))),
        Operation(Plus),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((6, 5, 0)),
        Some((4, 5, 1)),
        Some((5, 7, 0)),
        Some((9, 8, 0)),
        Some((3, 8, 1)),
        Some((8, 6, 0)),
        Some((11, 10, 0)),
        Some((2, 10, 1)),
        Some((10, 9, 0)),
        Some((0, 12, 0)),
        Some((1, 12, 1)),
        Some((12, 11, 0)),
      ],
    )),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("x"))),
        Edge(BoundVar(Variable("y"))),
        Edge(BoundVar(Variable("z"))),
        Edge(BoundVar(Variable("u"))),
        Operation(Plus),
        Edge(BoundVar(Variable("b"))),
        Edge(BoundVar(Variable("c"))),
        Operation(Plus),
        Edge(BoundVar(Variable("a"))),
        Operation(Plus),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((5, 4, 0)),
        Some((3, 4, 1)),
        Some((4, 6, 0)),
        Some((8, 7, 0)),
        Some((2, 7, 1)),
        Some((7, 5, 0)),
        Some((0, 9, 0)),
        Some((1, 9, 1)),
        Some((9, 8, 0)),
      ],
    )),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("x"))),
        Edge(BoundVar(Variable("y"))),
        Edge(BoundVar(Variable("z"))),
        Operation(Plus),
        Edge(BoundVar(Variable("a"))),
        Edge(BoundVar(Variable("b"))),
        Operation(Plus),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((4, 3, 0)),
        Some((2, 3, 1)),
        Some((3, 5, 0)),
        Some((0, 6, 0)),
        Some((1, 6, 1)),
        Some((6, 4, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((2, 1, 0)),
    Some((3, 1, 1)),
    Some((4, 1, 2)),
    Some((1, 5, 0)),
    Some((0, 6, 0)),
    Some((6, 4, 0)),
    Some((0, 7, 0)),
    Some((7, 3, 0)),
    Some((0, 8, 0)),
    Some((8, 2, 0)),
  ],
)
