sd-core/src/snapshots/sd_core__graph__tests__thunks.snap
---
source: sd-core/src/graph.rs
expression: graph
---
HyperGraph(
  nodes: {
    0: NodeInfo(
      data: Input,
      inputs: [],
      outputs: [
        [
          Port(
            node: NodeIndex(1),
            index: PortIndex(0),
          ),
          Port(
            node: NodeIndex(2),
            index: PortIndex(0),
          ),
          Port(
            node: NodeIndex(3),
            index: PortIndex(0),
          ),
        ],
      ],
    ),
    1: NodeInfo(
      data: Thunk(
        args: 2,
        body: HyperGraph(
          nodes: {
            0: NodeInfo(
              data: Input,
              inputs: [],
              outputs: [
                [
                  Port(
                    node: NodeIndex(1),
                    index: PortIndex(0),
                  ),
                ],
                [
                  Port(
                    node: NodeIndex(1),
                    index: PortIndex(1),
                  ),
                ],
                [
                  Port(
                    node: NodeIndex(2),
                    index: PortIndex(1),
                  ),
                ],
              ],
            ),
            1: NodeInfo(
              data: Weight(Active(Plus)),
              inputs: [
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(0),
                ),
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(1),
                ),
              ],
              outputs: [
                [
                  Port(
                    node: NodeIndex(2),
                    index: PortIndex(0),
                  ),
                ],
              ],
            ),
            2: NodeInfo(
              data: Weight(Active(Plus)),
              inputs: [
                Port(
                  node: NodeIndex(1),
                  index: PortIndex(0),
                ),
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(2),
                ),
              ],
              outputs: [
                [
                  Port(
                    node: NodeIndex(3),
                    index: PortIndex(0),
                  ),
                ],
              ],
            ),
            3: NodeInfo(
              data: Output,
              inputs: [
                Port(
                  node: NodeIndex(2),
                  index: PortIndex(0),
                ),
              ],
              outputs: [],
            ),
          },
        ),
      ),
      inputs: [
        Port(
          node: NodeIndex(0),
          index: PortIndex(0),
        ),
      ],
      outputs: [
        [
          Port(
            node: NodeIndex(4),
            index: PortIndex(0),
          ),
        ],
      ],
    ),
    2: NodeInfo(
      data: Thunk(
        args: 3,
        body: HyperGraph(
          nodes: {
            0: NodeInfo(
              data: Input,
              inputs: [],
              outputs: [
                [
                  Port(
                    node: NodeIndex(1),
                    index: PortIndex(0),
                  ),
                ],
                [
                  Port(
                    node: NodeIndex(1),
                    index: PortIndex(1),
                  ),
                ],
                [
                  Port(
                    node: NodeIndex(2),
                    index: PortIndex(1),
                  ),
                ],
                [
                  Port(
                    node: NodeIndex(3),
                    index: PortIndex(1),
                  ),
                ],
              ],
            ),
            1: NodeInfo(
              data: Weight(Active(Plus)),
              inputs: [
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(0),
                ),
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(1),
                ),
              ],
              outputs: [
                [
                  Port(
                    node: NodeIndex(2),
                    index: PortIndex(0),
                  ),
                ],
              ],
            ),
            2: NodeInfo(
              data: Weight(Active(Plus)),
              inputs: [
                Port(
                  node: NodeIndex(1),
                  index: PortIndex(0),
                ),
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(2),
                ),
              ],
              outputs: [
                [
                  Port(
                    node: NodeIndex(3),
                    index: PortIndex(0),
                  ),
                ],
              ],
            ),
            3: NodeInfo(
              data: Weight(Active(Plus)),
              inputs: [
                Port(
                  node: NodeIndex(2),
                  index: PortIndex(0),
                ),
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(3),
                ),
              ],
              outputs: [
                [
                  Port(
                    node: NodeIndex(4),
                    index: PortIndex(0),
                  ),
                ],
              ],
            ),
            4: NodeInfo(
              data: Output,
              inputs: [
                Port(
                  node: NodeIndex(3),
                  index: PortIndex(0),
                ),
              ],
              outputs: [],
            ),
          },
        ),
      ),
      inputs: [
        Port(
          node: NodeIndex(0),
          index: PortIndex(0),
        ),
      ],
      outputs: [
        [
          Port(
            node: NodeIndex(4),
            index: PortIndex(1),
          ),
        ],
      ],
    ),
    3: NodeInfo(
      data: Thunk(
        args: 4,
        body: HyperGraph(
          nodes: {
            0: NodeInfo(
              data: Input,
              inputs: [],
              outputs: [
                [
                  Port(
                    node: NodeIndex(1),
                    index: PortIndex(0),
                  ),
                ],
                [
                  Port(
                    node: NodeIndex(1),
                    index: PortIndex(1),
                  ),
                ],
                [
                  Port(
                    node: NodeIndex(2),
                    index: PortIndex(1),
                  ),
                ],
                [
                  Port(
                    node: NodeIndex(3),
                    index: PortIndex(1),
                  ),
                ],
                [
                  Port(
                    node: NodeIndex(4),
                    index: PortIndex(1),
                  ),
                ],
              ],
            ),
            1: NodeInfo(
              data: Weight(Active(Plus)),
              inputs: [
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(0),
                ),
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(1),
                ),
              ],
              outputs: [
                [
                  Port(
                    node: NodeIndex(2),
                    index: PortIndex(0),
                  ),
                ],
              ],
            ),
            2: NodeInfo(
              data: Weight(Active(Plus)),
              inputs: [
                Port(
                  node: NodeIndex(1),
                  index: PortIndex(0),
                ),
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(2),
                ),
              ],
              outputs: [
                [
                  Port(
                    node: NodeIndex(3),
                    index: PortIndex(0),
                  ),
                ],
              ],
            ),
            3: NodeInfo(
              data: Weight(Active(Plus)),
              inputs: [
                Port(
                  node: NodeIndex(2),
                  index: PortIndex(0),
                ),
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(3),
                ),
              ],
              outputs: [
                [
                  Port(
                    node: NodeIndex(4),
                    index: PortIndex(0),
                  ),
                ],
              ],
            ),
            4: NodeInfo(
              data: Weight(Active(Plus)),
              inputs: [
                Port(
                  node: NodeIndex(3),
                  index: PortIndex(0),
                ),
                Port(
                  node: NodeIndex(0),
                  index: PortIndex(4),
                ),
              ],
              outputs: [
                [
                  Port(
                    node: NodeIndex(5),
                    index: PortIndex(0),
                  ),
                ],
              ],
            ),
            5: NodeInfo(
              data: Output,
              inputs: [
                Port(
                  node: NodeIndex(4),
                  index: PortIndex(0),
                ),
              ],
              outputs: [],
            ),
          },
        ),
      ),
      inputs: [
        Port(
          node: NodeIndex(0),
          index: PortIndex(0),
        ),
      ],
      outputs: [
        [
          Port(
            node: NodeIndex(4),
            index: PortIndex(2),
          ),
        ],
      ],
    ),
    4: NodeInfo(
      data: Weight(Active(Plus)),
      inputs: [
        Port(
          node: NodeIndex(1),
          index: PortIndex(0),
        ),
        Port(
          node: NodeIndex(2),
          index: PortIndex(0),
        ),
        Port(
          node: NodeIndex(3),
          index: PortIndex(0),
        ),
      ],
      outputs: [
        [
          Port(
            node: NodeIndex(5),
            index: PortIndex(0),
          ),
        ],
      ],
    ),
    5: NodeInfo(
      data: Output,
      inputs: [
        Port(
          node: NodeIndex(4),
          index: PortIndex(0),
        ),
      ],
      outputs: [],
    ),
  },
)
